@@ -3,7 +3,7 @@
 *                                                                      *
 * This file is part of the Final Cut widget toolkit                    *
 *                                                                      *
-* Copyright 2017-2018 Markus Gans                                      *
+* Copyright 2017-2019 Markus Gans                                      *
 *                                                                      *
 * The Final Cut is free software; you can redistribute it and/or       *
 * modify it under the terms of the GNU Lesser General Public License   *
@@ -111,7 +111,7 @@ CheckList::~CheckList()  // destructor
 //----------------------------------------------------------------------
 void CheckList::populate()
 {
-  std::string list[][2] =
+  const std::string list[][2] =
   {
     { "Milk", "Highest" },
     { "Cheese", "High" },
